--- a/resume.html
+++ b/resume.html
@@ -21,78 +21,10 @@
         </ul>
     </nav>
     <main>
-        <div id="profile">
-            <img src="./img/IMG_5275.png" alt="profilPicture" draggable= "false">
-            <p id="bio">I am a 20 year old Student currently studying Computer Science at Langara College. Lifeguarding Certified</p>   
-            <h2>Personal Info</h2>
-            <p>Address</p>
-            <span>6870 Cedar Rose Crt Vancouver, BC V5J 5J7</span>
-            <p>Email</p>
-            <a href="mailto:justin.won1214+work@gmail.com">Justin.won1214+work@gmail.com</a>
-            <p>#</p>
-            <span>(778)-551-8589</span>
-        </div>
-        <h1 id="Name">Justin Wang</h1>
-        <div class="section" id="Objective">
-            <h2>Objective</h2>
-            <p>I am a passionate and ambitious individual, eager to work and learn quickly. An active problem solver who listens well and is responsive to situations. My goal is to further develop interpersonal and communication skills in a professional environment.</p>
-        </div>
-        <div class="section" id="WorkExperience">
-            <h2>Work Experience</h2>
-            <h3>Volunteer | Anne Kang - Burnaby BC</h3>
-            <p>June 2021 - Present</p>
-            <ul>
-                <li>Created visual content to increase traction on social media platforms.</li>
-                <li>Managed data entry and organization to support database validation and analysis.</li>
-                <li>Assisted the organization's owner with campaigning and sales initiatives.</li>
-                <li>Provided personalized guest assistance at formal events.</li>
-                <li>Collaborated in the planning, setup, and teardown of community and public events.</li>
-            </ul>
-
-            <h3>Sales Associate | Sakura Media - Burnaby BC</h3>
-            <p>September 2022 - November 2022</p>
-            <ul>
-                <li>Delivered exceptional customer service in a retail environment.</li>
-                <li>Made product recommendations and actively listened to customer preferences.</li>
-                <li>Fostered strong customer relationships through engagement and service.</li>
-                <li>Collaborated with peers in a fast-paced environment and ensured warehouse efficiency.</li>
-            </ul>
-        </div>
-        <div class="section" id="Education">
-            <h2>Education</h2>
-            <p><strong>Computer Science Major</strong><br>Langara College, Vancouver BC<br>June 2021 - Present</p>
-            <p><strong>Burnaby South Secondary</strong><br>Graduated - June 2022</p>
-        </div>
-        <div class="section" id="Certs">
-            <h2>Certifications | Awards</h2>
-            <ul>
-                <li>Standard First Aid CPR-C</li>
-                <li>Water Safety Instructor</li>
-                <li>National Lifeguard</li>
-                <li>Designer of Burnaby South school mascot (selected from 1700 candidates)</li>
-                <li>Principal's List & Honour Cord (2022)</li>
-                <li>Two-time recipient of Principal's List & Work Ethic Award (2022)</li>
-                <li>U18 Club Swimming Championship: 200m free (2018)</li>
-            </ul>
-        </div>
-        <div class="section" id="Languages">
-            <h2>Languages</h2>
-            <ul class="languages">
-                <li>English - Native</li>
-                <li>Mandarin - Native</li>
-                <li>Taiwanese - Entry</li>
-            </ul>
-        </div>
-        <div class="section" id="Skills">
-            <h2>Skills</h2>
-            <ul class="skills">
-                <li>Attentive to Detail</li>
-                <li>Teamwork and Collaborative</li>
-                <li>Organized and Efficient</li>
-                <li>Outstanding Communication Skills</li>
-                <li>Enthusiastic to Grow</li>
-            </ul>
-        </div>
+        <form action=""></form>
+        <h2>Resume</h2>
+        <img width="100%" src="./Resume/InternshipResume-2.png" alt="Resume">
+        <p><a href="./Resume/InternshipResume-3.pdf" download>Download</a></p>
     </main>
     <footer>
         <hr>
