--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
         </ul>
     </nav>
     <main>
+        <div id="about">
+            <h2>About</h2>
+            <p>My name is Justin, a Computer Science student with a keen interest in programming, problem-solving, and building innovative applications. My current projects include a Pomodoro Timer, a Notes app, and my local community centre's swim timetable. I am driven by curiosity and a desire to create, both of which are crucial in software development.</p>
+        </div>
+        <hr>
+        <h2>Recent Projects</h2>
+        <div class="transparentBG">
+            <div id="projects">
+                <section class="project">
+                    <img src="./Screenshot_2025-03-01_at_02.05.42.png" alt="">
+                    <p>KuromiTimer is a simple Pomodoro timer app built with Electron. It helps you stay focused by following the Pomodoro Technique, with customizable time intervals for work and break sessions.</p>
+                    <p>Latest Build: 0.0.1</p>
+                    <a href="https://github.com/jstn-swm/KuromiTimer">See More</a>
+                </section>
+                <section class="project">
+                    <div class="wrapper"></div>
+                    <p>SwimSchedule is a app build with Electron to quickly get available time tables to swim. Key-feature is highlighting best time to visit. Prevent wasting time and save a couple clicks! 😊</p>
+                    <p>Latest Build: 0.0.1</p>
+                    <a href="https://github.com/jstn-swm/SwimSchedule">See More</a>
+                </section>
+            </div>
+        </div>
     </main>
     <footer>
         <hr>
