--- a/index.html
+++ b/index.html
@@ -43,6 +43,54 @@
                     <p>Latest Build: 0.0.1</p>
                     <a href="https://github.com/jstn-swm/SwimSchedule">See More</a>
                 </section>
+                <section class="project">
+                    <img src="./Screenshot_2025-03-01_at_02.05.42.png" alt="">
+                    <p>KuromiTimer is a simple Pomodoro timer app built with Electron. It helps you stay focused by following the Pomodoro Technique, with customizable time intervals for work and break sessions.</p>
+                    <p>Latest Build: 0.0.1</p>
+                    <a href="https://github.com/jstn-swm/KuromiTimer">See More</a>
+                </section>
+                <section class="project">
+                    <div class="wrapper"></div>
+                    <p>SwimSchedule is a app build with Electron to quickly get available time tables to swim. Key-feature is highlighting best time to visit. Prevent wasting time and save a couple clicks! 😊</p>
+                    <p>Latest Build: 0.0.1</p>
+                    <a href="https://github.com/jstn-swm/SwimSchedule">See More</a>
+                </section>
+                <section class="project">
+                    <img src="./Screenshot_2025-03-01_at_02.05.42.png" alt="">
+                    <p>KuromiTimer is a simple Pomodoro timer app built with Electron. It helps you stay focused by following the Pomodoro Technique, with customizable time intervals for work and break sessions.</p>
+                    <p>Latest Build: 0.0.1</p>
+                    <a href="https://github.com/jstn-swm/KuromiTimer">See More</a>
+                </section>
+                <section class="project">
+                    <div class="wrapper"></div>
+                    <p>SwimSchedule is a app build with Electron to quickly get available time tables to swim. Key-feature is highlighting best time to visit. Prevent wasting time and save a couple clicks! 😊</p>
+                    <p>Latest Build: 0.0.1</p>
+                    <a href="https://github.com/jstn-swm/SwimSchedule">See More</a>
+                </section>
+                <section class="project">
+                    <img src="./Screenshot_2025-03-01_at_02.05.42.png" alt="">
+                    <p>KuromiTimer is a simple Pomodoro timer app built with Electron. It helps you stay focused by following the Pomodoro Technique, with customizable time intervals for work and break sessions.</p>
+                    <p>Latest Build: 0.0.1</p>
+                    <a href="https://github.com/jstn-swm/KuromiTimer">See More</a>
+                </section>
+                <section class="project">
+                    <div class="wrapper"></div>
+                    <p>SwimSchedule is a app build with Electron to quickly get available time tables to swim. Key-feature is highlighting best time to visit. Prevent wasting time and save a couple clicks! 😊</p>
+                    <p>Latest Build: 0.0.1</p>
+                    <a href="https://github.com/jstn-swm/SwimSchedule">See More</a>
+                </section>
+                <section class="project">
+                    <img src="./Screenshot_2025-03-01_at_02.05.42.png" alt="">
+                    <p>KuromiTimer is a simple Pomodoro timer app built with Electron. It helps you stay focused by following the Pomodoro Technique, with customizable time intervals for work and break sessions.</p>
+                    <p>Latest Build: 0.0.1</p>
+                    <a href="https://github.com/jstn-swm/KuromiTimer">See More</a>
+                </section>
+                <section class="project">
+                    <div class="wrapper"></div>
+                    <p>SwimSchedule is a app build with Electron to quickly get available time tables to swim. Key-feature is highlighting best time to visit. Prevent wasting time and save a couple clicks! 😊</p>
+                    <p>Latest Build: 0.0.1</p>
+                    <a href="https://github.com/jstn-swm/SwimSchedule">See More</a>
+                </section>
             </div>
         </div>
     </main>
