--- a/index.html
+++ b/index.html
@@ -57,27 +57,7 @@
       </div>
       <hr />
       <h2>Recent Projects</h2>
-      <div class="transparentBG">
-        <div id="projects"></div>
-      </div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
-      <div class="transparentBG"></div>
+      <a href="./notes.html">Notes</a>
     </main>
     <footer>
       <hr />
